<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_48asdp"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_sign_up_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24asdp"
                android:layout_marginLeft="@dimen/_24asdp"
                android:layout_marginRight="@dimen/_24asdp"
                android:layout_marginStart="@dimen/_24asdp"
                android:layout_marginTop="@dimen/_48asdp"
                android:text="@string/sign_up_label_info"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_sign_up_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24asdp"
                android:layout_marginLeft="@dimen/_24asdp"
                android:layout_marginRight="@dimen/_24asdp"
                android:layout_marginStart="@dimen/_24asdp"
                android:layout_marginTop="@dimen/_24asdp"
                app:hintEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_info">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_hint_email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_sign_up_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24asdp"
                android:layout_marginLeft="@dimen/_24asdp"
                android:layout_marginRight="@dimen/_24asdp"
                android:layout_marginStart="@dimen/_24asdp"
                android:layout_marginTop="@dimen/_20asdp"
                app:hintEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_sign_up_email">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_hint_username"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_sign_up_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24asdp"
                android:layout_marginLeft="@dimen/_24asdp"
                android:layout_marginRight="@dimen/_24asdp"
                android:layout_marginStart="@dimen/_24asdp"
                android:layout_marginTop="@dimen/_20asdp"
                app:hintEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_sign_up_username"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sing_in_hint_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tv_sign_up_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/background_sign_in_up"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/sign_in_label_register"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/white" />

</android.support.design.widget.CoordinatorLayout>